--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@ html {
 
 body {
     color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: #2D2D2D;
 }
 
