--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,18 @@ h3 {
     font-weight: bold;
 }
 
+tbody {
+    color: #FFFFFF;
+    font-weight: 100;
+    font-size: large;
+}
+
+thead {
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: larger;
+}
+
 a {
     color: #2D2D2D;
     font-size: 18px;
