--- a/css/style.css
+++ b/css/style.css
@@ -72,3 +72,11 @@ a {
     color: white;
     text-decoration: underline;
 }
+
+.navbar-brand {
+    color: white;
+}
+
+.navbar-brand:hover {
+    color: white;
+}
